--- a/assets/scss/_image-modal_project.scss
+++ b/assets/scss/_image-modal_project.scss
@@ -7,7 +7,7 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 9999999;
+  z-index: 999;
   padding-top: 4em;
   left: 0;
   top: 0;
